little cleanup, fixed quiz flag display bug

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -36,7 +36,7 @@
 
 
 .sprite-logo {
-	height: px;
-	width: px;
+	height: 50px;
+	width: 495px;
   background: url('../img/sprite-s79b5a142cb.png') no-repeat 0 -74px;
 }
